--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,9 @@ readme = "README.md"
 exclude = ["FEATURES.md"]
 
 [features]
-default = ["runtime-tokio"]
-runtime-agnostic = ["async-codec-lite"]
-runtime-tokio = ["tokio", "tokio-util"]
 proposed = ["lsp-types/proposed"]
 
 [dependencies]
-async-codec-lite = { version = "0.0", optional = true }
 async-trait = "0.1"
 auto_impl = "1.0"
 bytes = "1.5"
@@ -27,9 +23,9 @@ lsp-types = "0.97.0"
 memchr = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.35", optional = true }
-tokio-util = { version = "0.7", optional = true, features = ["codec"] }
-tower-lsp-macros = { version = "0.9", path = "./tower-lsp-macros" }
+tokio = { version = "1.35", features = ["macros"] }
+tokio-util = { version = "0.7", features = ["codec"] }
+deno_tower_lsp_macros = { version = "0.1", path = "./tower-lsp-macros" }
 tower = { version = "0.4", default-features = false, features = ["util"] }
 tracing = "0.1"
 
