--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ lsp-types = "0.97.0"
 memchr = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.35", features = ["macros"] }
+tokio = { version = "1.35", features = ["macros", "rt"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 deno_tower_lsp_macros = { version = "0.1", path = "./tower-lsp-macros" }
 tower = { version = "0.4", default-features = false, features = ["util"] }
