--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,6 @@ jobs:
       run: |
         cargo test --workspace --no-default-features
     - run: cargo clippy
+      if: contains(matrix.os, 'ubuntu')
     - run: cargo fmt --all -- --check
+      if: contains(matrix.os, 'ubuntu')
