--- a/tower-lsp-macros/Cargo.toml
+++ b/tower-lsp-macros/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "tower-lsp-macros"
-version = "0.9.0"
-authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
-description = "Internal procedural macros for tower-lsp"
+name = "deno_tower_lsp_macros"
+version = "0.10.0"
+authors = ["Eyal Kalderon <ebkalderon@gmail.com>", "the Deno authors"]
+description = "This is a fork of https://crates.io/crates/tower-lsp macros, used in Deno. At the moment only floating patches."
 edition = "2021"
 rust-version = "1.56.0"
 license = "MIT OR Apache-2.0"
