--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.35", features = ["macros", "rt"] }
 tokio-util = { version = "0.7", features = ["codec"] }
-deno_tower_lsp_macros = { version = "0.10", path = "./tower-lsp-macros" }
+deno-tower-lsp-macros = { version = "0.10", path = "./tower-lsp-macros" }
 tower = { version = "0.5", default-features = false, features = ["util"] }
 tracing = "0.1"
 
