--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,11 @@ jobs:
       if: contains(matrix.os, 'ubuntu')
     - run: cargo fmt --all -- --check
       if: contains(matrix.os, 'ubuntu')
+    - name: cargo publish
+      if: |
+        contains(matrix.os, 'ubuntu') &&
+        github.repository == 'denoland/tower-lsp' &&
+        startsWith(github.ref, 'refs/tags/')
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      run: cargo publish
