--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,29 +5,32 @@ on: [push, pull_request]
 jobs:
   cargo-test:
     name: cargo test (${{ matrix.os }})
+    if: |
+      github.event_name == 'push' ||
+      !startsWith(github.event.pull_request.head.label, 'denoland:')
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         include:
-        - continue-on-error: true
+          - continue-on-error: true
     steps:
-    - uses: actions/checkout@v4
-    - uses: dsherret/rust-toolchain-file@v1
-    - name: Run cargo test
-      continue-on-error: ${{ matrix.continue-on-error || false }}
-      run: |
-        cargo test --workspace --no-default-features
-    - run: cargo clippy
-      if: contains(matrix.os, 'ubuntu')
-    - run: cargo fmt --all -- --check
-      if: contains(matrix.os, 'ubuntu')
-    - name: cargo publish
-      if: |
-        contains(matrix.os, 'ubuntu') &&
-        github.repository == 'denoland/tower-lsp' &&
-        startsWith(github.ref, 'refs/tags/')
-      env:
-        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-      run: cargo publish
+      - uses: actions/checkout@v4
+      - uses: dsherret/rust-toolchain-file@v1
+      - name: Run cargo test
+        continue-on-error: ${{ matrix.continue-on-error || false }}
+        run: |
+          cargo test --workspace --no-default-features
+      - run: cargo clippy
+        if: contains(matrix.os, 'ubuntu')
+      - run: cargo fmt --all -- --check
+        if: contains(matrix.os, 'ubuntu')
+      - name: cargo publish
+        if: |
+          contains(matrix.os, 'ubuntu') &&
+          github.repository == 'denoland/tower-lsp' &&
+          startsWith(github.ref, 'refs/tags/')
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish
