--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ bytes = "1.5"
 dashmap = "5.5"
 futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
 httparse = "1.8"
-lsp-types = "0.97.0"
+lsp-types = { package = "ls-types", version = "0.0.3" }
 memchr = "2.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
